--- a/src/components/board/Board.css
+++ b/src/components/board/Board.css
@@ -1,30 +1,25 @@
 /* Board layout */
 .board-container {
+    align-self: center;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    width: 100vw;
-    /* Full window width */
-    height: 100vh;
-    /* Full window height */
-    /* Adjust the number of columns as needed */
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-auto-rows: 1fr;
+    width: 100%;
+    height: 100%;
     gap: 5px;
-    padding: 0px;
-    background: url("../../assets/map.webp") no-repeat center center;
-    background-size: cover;
+    overflow: hidden;
 }
 
 /* Tile appearance */
 .tile {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    align-items: flex-end;
     text-align: center;
     padding: 10px;
-    border: 2px solid #ccc;
     border-radius: 8px;
-    background-color: rgba(255, 255, 255, 0.5);
-    /* Semi-transparent for better map visibility */
+    background-color: rgba(255, 255, 255, 0.8);
     font-size: 14px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     cursor: pointer;
@@ -37,17 +32,17 @@
 }
 
 .tile.neutral {
-    background-color: #e2e3e5;
+    background-color: #e2e3e590;
     border-color: #6c757d;
 }
 
 .tile.obstacle {
-    background-color: #f8d7da;
+    background-color: #f8d7da90;
     border-color: #dc3545;
 }
 
 .tile.reward {
-    background-color: #fff3cd;
+    background-color: #fff3cd90;
     border-color: #ffc107;
 }
 
@@ -58,12 +53,13 @@
 
 /* Highlight active tile */
 .tile.active {
-    border: 2px solid #007bff;
-    box-shadow: 0 0 10px rgba(0, 123, 255, 0.5);
+    border: 2px solid #79cd1b;
+    box-shadow: 0 0 10px rgba(2, 70, 19, 0.547);
 }
 
 /* Player token */
 .player-token {
     font-size: 24px;
+    align-self: center;
     margin-bottom: 5px;
 }
