--- a/src/components/dice/Dice.css
+++ b/src/components/dice/Dice.css
@@ -1,13 +1,15 @@
 .dice-container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     margin-top: 20px;
 }
 
 .dice-face {
+    color: white;
     font-size: 24px;
-    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 button {
