--- a/src/components/dice/Dice.css
+++ b/src/components/dice/Dice.css
@@ -1,27 +1,51 @@
 .dice-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
     margin-top: 20px;
 }
 
-.dice-face {
-    color: white;
-    font-size: 24px;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-button {
-    background-color: #007bff;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+.dice-button {
     font-size: 16px;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    background-color: #4CAF50;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
 }
 
-button:hover {
-    color:cyan;
+.dice-images {
+    position: relative;
+    width: 80px;
+    height: 80px;
+    align-items: center;
+    justify-content: center;
+    margin-right: 80px;
+    margin-bottom: 16px;
+}
+
+.dice-image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transform: rotate(0deg);
+    /* Start with no rotation */
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    /* Add transition for transform */
+}
+
+.dice-image.visible {
+    opacity: 1;
+    transform: rotate(360deg);
+    /* Rotate 360 degrees when visible */
+}
+
+.dice-image.hidden {
+    opacity: 0;
+    transform: rotate(0deg);
+    /* Reset rotation when hidden */
 }
