--- a/src/pages/BoardGame.css
+++ b/src/pages/BoardGame.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,100..900;1,100..900&family=Special+Elite&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Special+Elite&display=swap');
 
 .BoardGame {
     display: flex;
@@ -54,7 +54,7 @@ h2 {
 }
 
 .subtitle {
-    font-size: 0.8em;
+    font-size: 0.9em;
     color: white;
     text-align: center;
     line-height: 1.2em;
@@ -67,12 +67,20 @@ h2 {
     align-self: flex-end;
 }
 
-.markdown-content {
+.journal-page-title {
+    font-family: 'Special Elite';
+    font-size: 1em;
+    font-weight: bold;
     text-align: left;
+}
+
+.markdown-content {
     color: #333;
-    font-family: 'Arial, sans-serif';
-    font-size: 18px;
-    line-height: 1.5;
+    font-family: 'Chivo', sans-serif;
+    font-size: 1em;
+    line-height: 1.5em;
+    font-weight: lighter;
+    text-align: left;
 }
 
 .markdown-content h1,
@@ -80,4 +88,11 @@ h2 {
 .markdown-content h3 {
     color: #333;
     text-align: center;
+    padding-bottom: 8px;
+}
+
+.markdown-tag {
+    font-size: 0.8em;
+    color: #333;
+    align-self: flex-end;
 }
